# Crypto-Tracker

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
backend/: main.py
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CandlestickChart.jsx  CryptoCharts.jsx  CryptoList.jsx  SearchBar.jsx
