[project]
name = "crypto-tracker"
version = "0.1.0"
description = "Track crypto currency"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "pycoingecko==3.1.0",
    "python-dotenv==1.0.1",
    "uvicorn==0.30.6",
    "python-dotenv==1.0.1",
    "requests>=2.32.3",
]
